--- a/package.json
+++ b/package.json
@@ -1,20 +1,58 @@
 {
-  "name": "cnc-app",
-  "version": "0.0.1",
-  "description": "printrbot cnc app",
-  "main": "main.js",
+  "name": "cnc-client",
+  "version": "0.0.2",
+  "description": "PrintrBot.com CNC driving app",
+  "main": "index.js",
   "scripts": {
-    "start": "electron .",
-    "build": "electron-packager . pbCNC --platform=darwin --arch=x64 --version=0.36.0 --asar=true --prune=true"
+    "postinstall": "install-app-deps",
+    "pack": "build --dir",
+    "dist": "build"
   },
-  "author": "mick",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/printrbot/cnc-client.git"
+  },
+  "keywords": [
+    "PrintrBot",
+    "CNC",
+    "Electron",
+    "Synthetos",
+    "TinyG",
+    "G2Core"
+  ],
+  "author": "https://printrbot.com/",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/printrbot/cnc-client/issues"
+  },
+  "homepage": "https://github.com/printrbot/cnc-client#readme",
+  "build": {
+    "appId": "com.printrbot.pbCNC",
+    "dmg": {
+      "contents": [
+        {
+          "x": 410,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        },
+        {
+          "x": 130,
+          "y": 150,
+          "type": "file"
+        }
+      ]
+    },
+    "win": {},
+    "linux": {
+      "target": [
+        "deb",
+        "AppImage"
+      ]
+    }
+  },
   "devDependencies": {
-    "electron-packager": "^5.2.1",
-    "electron-prebuilt": "0.36.0",
-    "electron-rebuild": "^1.1.3"
-  },
-  "dependencies": {
-    "jquery": "^2.2.1",
-    "tinyg": "git+https://github.com/giseburt/TinyG-node.git"
+    "electron-builder": "next",
+    "electron-prebuilt": "^1.2.8"
   }
 }
