--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cnc-app",
+  "private": true,
   "version": "0.0.1",
   "description": "printrbot cnc app",
   "main": "main.js",
@@ -8,10 +9,10 @@
   },
   "author": "mick",
   "devDependencies": {
-    "bower": "^1.7.9"
   },
   "dependencies": {
     "jquery": "^2.2.1",
-    "tinyg": "git+https://github.com/giseburt/TinyG-node.git"
+    "tinyg": "git+https://github.com/giseburt/TinyG-node.git",
+    "bower": "^1.7.9"
   }
 }
