--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "postinstall": "install-app-deps",
     "pack": "build --dir",
-    "dist": "build"
+    "dist": "build",
+    "dist-win32": "build --ia32"
   },
   "repository": {
     "type": "git",
